welcome.lessons.welcome.array.has271.Has271.scala.error
has271:9: error: ';' expected but 'return' found.
	}return flag;
         ^